- fixed the bug where bottom part of the html page contents were being cut offed - some css changes to accomodate being within moodle content page

--- a/css/msmAuthoring.css
+++ b/css/msmAuthoring.css
@@ -18,8 +18,8 @@
     background-color: #FFFFFF;
     min-height: 700px;
     top: 50px;
-    margin-left: 10px;
-    margin-right: 10px;
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
 }
 
 #msm_editor_container h2
